@@ -25,6 +25,10 @@ Working version
 
 ### Bug fixes:
 
+- #13380, #?????: Provide a system(3) replacement on Android, allowing
+  to build OCaml on Android with Termux, and use Sys.command.
+  (Antonin Décimo, review by ?????)
+
 OCaml 5.3.0
 ___________
 
